import.c: hecha carga del texto del documento y la separacion del título, corregidos errores menores

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "array": "c",
-        "string": "c"
+        "string": "c",
+        "import.h": "c",
+        "string.h": "c"
     }
 }
